:fire: Removed CSRF and Helmet (for now)

--- a/views/_nav.pug
+++ b/views/_nav.pug
@@ -1,6 +1,6 @@
 nav
     ul
         li
-            a(href='/') Home
+            a(href='/dashboard') Dashboard
         li
             a(href='/logout') Logout
