--- a/views/login.pug
+++ b/views/login.pug
@@ -4,12 +4,10 @@ block content
     form(method="post")
     
         label(for="email") E-mail Address
-        input(id="email" name="email" type="email" required=true)
+        input(id="email" name="email" type="email" required=true value=email)
 
         label(for="password") Password
         input(id="password" name="password" type="password" required=true)
-
-        input(type="hidden" name="csrf_token" value=csrf_token)
 
         button(type="submit") Log In
 
